# RAT-POC-SCENARIO-1

./: .gitignore  Cargo.toml  Makefile  README.MD  README.md  installer.iss
assets/: netflix.desktop
output/: netflix_0.1.0-1_amd64.deb  netflix_1.0.0_amd64.deb
src/: anti_debug.rs  browser_info.rs  connexion.rs  input.rs  kill_switch.rs  logs.rs  main.rs  mic_rec.rs  network_scanner.rs  persistance.rs  poly.rs  screenshot.rs  shell.rs
