[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.15", features = ["json", "multipart"] }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdev = "=0.4.6"
lazy_static = "1.5.0"
screenshots = "0.8.10"
tempfile = "3.19.1"
zip = "4.0.0"
sysinfo = "0.35.2"
anyhow = "1.0.98"
aes = "0.8"
cbc = "0.1"
rand = "0.9.1"
if-addrs = "0.10"
ipnetwork = "0.21.1"
futures = "0.3.31"
dirs = "6.0.0"
walkdir = "2.5.0"
chrono = "0.4.41"
cpal = "0.16.0"
hound = "3.5.1"
